--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h2>Contact Me</h2>
             <p>xyz@gmail.com| 9800000000</p>
             <div class="social">
-                <a href=""><i class='bx bxl-facebook-circle'></i></a>
+                <a href="https://www.facebook.com/niru.poudel.56"><i class='bx bxl-facebook-circle'></i></a>
                 <a href=""><i class='bx bxl-instagram' ></i></a>
                 <a href=""><i class='bx bxl-twitter' ></i></a>
             </div>
